--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   background: linear-gradient(
       0deg,
       rgba(57, 57, 57, 0.5),
       rgba(57, 57, 57, 0.5)
     ),
-    url("assets/madecabanner.jpeg");
+    url("./assets/madecabanner.jpeg");
   background-size: cover;
 }
 
