Change background picture

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
       rgba(57, 57, 57, 0.5),
       rgba(57, 57, 57, 0.5)
     ),
-    url("./assets/ampules_banner.png");
+    url("./assets/Madeca_Cream3.png");
   background-size: cover;
 }
 
